paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_001/target.compile.log
warning: value assigned to `col` is never read
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_001/target.rs:38:5
   |
38 |     col = Hue::Claret;
   |     ^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `col` is never read
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_001/target.rs:51:5
   |
51 |     col = Hue::Winedark;
   |     ^^^
   |
   = help: maybe it is overwritten before being read?

error[E0381]: used binding `col` is possibly-uninitialized
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_001/target.rs:36:24
   |
35 |     let mut col: Hue;
   |         ------- binding declared here but left uninitialized
36 |     let cp: &mut Hue = &mut col;
   |                        ^^^^^^^^ `col` used here but it is possibly-uninitialized

error[E0506]: cannot assign to `col` because it is borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_001/target.rs:38:5
   |
36 |     let cp: &mut Hue = &mut col;
   |                        -------- `col` is borrowed here
37 |
38 |     col = Hue::Claret;
   |     ^^^^^^^^^^^^^^^^^ `col` is assigned to here but it was already borrowed
39 |
40 |     if *cp != Hue::Claret {
   |        --- borrow later used here

error: aborting due to 2 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0381, E0506.
For more information about an error, try `rustc --explain E0381`.